[gd_scene load_steps=7 format=3 uid="uid://cr16l7y5x5fys"]

[ext_resource type="Texture2D" uid="uid://bcypd57pmrt63" path="res://assets/Background/Hero.svg" id="1_ykjtl"]
[ext_resource type="Script" path="res://Scripts/WinScreen.gd" id="2_1sl55"]
[ext_resource type="FontFile" uid="uid://ckid4fla6wirc" path="res://assets/etc/Starzoom-Shavian.ttf" id="3_c5ymd"]
[ext_resource type="Texture2D" uid="uid://bv7fu6os82paq" path="res://assets/buttonsprites/UIbutton.png" id="4_hj3s0"]
[ext_resource type="AudioStream" uid="uid://dbnystp0y1gke" path="res://assets/FutrueSFX/PickUp.wav" id="5_els2m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mg0hu"]
size = Vector2(900, 500)

[node name="Winner" type="CanvasLayer"]
layer = 3
script = ExtResource("2_1sl55")

[node name="Win" type="TextureRect" parent="."]
self_modulate = Color(0.262932, 0.262932, 0.262932, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ykjtl")

[node name="YouWin" type="Label" parent="Win"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.165741
anchor_top = 0.158333
anchor_right = 0.806068
anchor_bottom = 0.305577
offset_right = -297.553
offset_bottom = -89.0233
grow_horizontal = 2
rotation = 0.00282774
scale = Vector2(1.75635, 2.24382)
theme_override_colors/font_color = Color(100, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = -6
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 11
theme_override_fonts/font = ExtResource("3_c5ymd")
theme_override_font_sizes/font_size = 69
text = "VICTORY!!"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="RunTime" type="Label" parent="Win"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.275926
anchor_top = 0.330556
anchor_right = 0.656381
anchor_bottom = 0.360867
offset_right = -22.892
offset_bottom = -1.73599
scale = Vector2(1.059, 1.056)
theme_override_colors/font_color = Color(97.838, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.91664, 0.91664, 0.91664, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = -2
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("3_c5ymd")
theme_override_font_sizes/font_size = 30
text = "RUN TIME:"
metadata/_edit_use_anchors_ = true

[node name="UIbutton" type="Sprite2D" parent="Win"]
self_modulate = Color(1, 1, 0, 1)
position = Vector2(550, 715)
scale = Vector2(0.833067, 0.529087)
texture = ExtResource("4_hj3s0")

[node name="StatsLink" type="TouchScreenButton" parent="Win/UIbutton"]
position = Vector2(-36.0115, -85.0522)
rotation = 3.13132
scale = Vector2(0.561073, -0.420907)
skew = 0.00613165
shape = SubResource("RectangleShape2D_mg0hu")
shape_visible = false

[node name="Label" type="Label" parent="Win/UIbutton/StatsLink"]
offset_left = 273.391
offset_top = -151.931
offset_right = 640.391
offset_bottom = -82.9306
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(-1.6022, 5.30977)
theme_override_colors/font_color = Color(48.649, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = -8
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3_c5ymd")
theme_override_font_sizes/font_size = 50
text = "DATA VALUT"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="EnimiesKilled" type="Label" parent="Win"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.275926
anchor_top = 0.402778
anchor_right = 0.792028
anchor_bottom = 0.431481
offset_right = -0.390015
scale = Vector2(1.001, 1)
theme_override_colors/font_color = Color(100, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = -2
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 7
theme_override_fonts/font = ExtResource("3_c5ymd")
theme_override_font_sizes/font_size = 30
text = "ENEMIES ELIMINATED: "
metadata/_edit_use_anchors_ = true

[node name="CashCollected" type="Label" parent="Win"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.275926
anchor_top = 0.481481
anchor_right = 0.761787
anchor_bottom = 0.512539
offset_right = -2.72998
offset_bottom = -2.54199
scale = Vector2(1.007, 1.082)
theme_override_colors/font_color = Color(100, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = -2
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("3_c5ymd")
theme_override_font_sizes/font_size = 30
text = "CASH COLLECTED:"
metadata/_edit_use_anchors_ = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_els2m")
volume_db = 2.1
pitch_scale = 1.4

[connection signal="pressed" from="Win/UIbutton/StatsLink" to="." method="_on_stats_link_pressed"]
[connection signal="pressed" from="Win/UIbutton/StatsLink" to="Win" method="_on_stats_link_pressed"]
